# uav-mapping-venv

./: .gitignore  README.md  pyvenv.cfg  source.sh
kinect/: camera-distortion-kinect.txt  camera-matrix-kinect.txt  create-point-cloud.py  panorama_functions.py  point-cloud-panorama.py  stitch-point-cloud.ipynb  stitcher.py  takeImagesFromKinect.py  xyz.py
occupancy/: CMakeLists.txt
panorama/: matches.py  panorama.py
panorama/casa/: 1.HEIC  2.HEIC  3.HEIC  4.HEIC
panorama/casa2/: 1.HEIC  2.HEIC  3.HEIC  4.HEIC  5.HEIC  6.HEIC  7.HEIC
slam/: functions.py  main.py  sync.txt
slam/Cpp/: CMakeLists.txt  main.cpp
slam/Python_code/: create_sync.py  functions.py  main.py  ply_file  read_ground_truth.py  read_sync.py
slam/camera_par/: K_depth.npy  K_rgb.npy  R.npy  T.npy
slam/trash/: basic.txt  example.cpp
vio/: Get_datasets  README.md  msckf_2_state.txt  run.sh
vio/Logs/: csv_file.csv  format_data.py  log_15_2021-6-5-13-05-12_actuator_armed_0.csv  log_15_2021-6-5-13-05-12_actuator_controls_0_0.csv  log_15_2021-6-5-13-05-12_airspeed_0.csv  log_15_2021-6-5-13-05-12_battery_status_0.csv  log_15_2021-6-5-13-05-12_commander_state_0.csv  log_15_2021-6-5-13-05-12_differential_pressure_0.csv  log_15_2021-6-5-13-05-12_ekf2_timestamps_0.csv  log_15_2021-6-5-13-05-12_estimator_innovation_test_ratios_0.csv  log_15_2021-6-5-13-05-12_estimator_innovation_variances_0.csv  log_15_2021-6-5-13-05-12_logger_status_0.csv  log_15_2021-6-5-13-05-12_position_setpoint_triplet_0.csv  log_15_2021-6-5-13-05-12_px4io_status_0.csv  log_15_2021-6-5-13-05-12_safety_0.csv  ulg_download_link  (+10 more)
(+93 files in other folders)
